--- a/html/Galleria.html
+++ b/html/Galleria.html
@@ -55,35 +55,75 @@
         <!--Navbar End here-->
 
 <div class="container ">
+  <h1 class="textCenter mt-5 mb-5 text-muted">Ennen jälkeen kuvat</h1>
+  <div class="row galleriaAlign mt-5">
+    <div class="col-xl-4 col-lg-4 col-md-6 col-12 d-flex  justify-content-center mt-3">
+      <div class="img-comp-container rounded">
+        <div class="img-comp-img">
+          <img src="../images/comp2.jpg" width="300" height="200" />
+        </div>
+        <div class="img-comp-img img-comp-overlay">
+          <img src="../images/comp1.jpg" width="300" height="200" />
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-4 col-lg-4 col-md-6 col-12 d-flex  justify-content-center mt-3">
+      <div class="img-comp-container rounded">
+        <div class="img-comp-img">
+          <img src="../images/comp3.jpg" width="300" height="200" />
+        </div>
+        <div class="img-comp-img img-comp-overlay">
+          <img src="../images/comp4.jpg" width="300" height="200" />
+        </div>
+      </div>
+    </div>
+    <div class="col-xl-4 col-lg-4 col-md-12 col-12 d-flex  justify-content-center mt-3">
+      <div class="img-comp-container rounded">
+        <div class="img-comp-img">
+          <img src="../images/comp6.jpg" width="300" height="200" />
+        </div>
+        <div class="img-comp-img img-comp-overlay">
+          <img src="../images/comp5.jpg" width="300" height="200" />
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="row mt-5">
-    <div class="col-xl-4">
+    <div class="col-xl-4 col-lg-4 col-md-6 col-12 d-flex  justify-content-center mt-3">
       <div class="img-comp-container rounded">
         <div class="img-comp-img">
-          <img src="../images/comp1.jpg" width="300" height="200" />
+          <img src="../images/comp8.jpg" width="300" height="200" />
         </div>
         <div class="img-comp-img img-comp-overlay">
-          <img src="../images/comp2.jpg" width="300" height="200" />
+          <img src="../images/comp7.jpg" width="300" height="200" />
         </div>
       </div>
     </div>
-    <div class="col-xl-4">
+    <div class="col-xl-4 col-lg-4 col-md-6 col-12 d-flex  justify-content-center mt-3">
       <div class="img-comp-container rounded">
         <div class="img-comp-img">
-          <img src="../images/comp1.jpg" width="300" height="200" />
+          <img src="../images/comp9.jpg" width="300" height="200" />
         </div>
         <div class="img-comp-img img-comp-overlay">
-          <img src="../images/comp2.jpg" width="300" height="200" />
+          <img src="../images/comp10.jpg" width="300" height="200" />
         </div>
       </div>
     </div>
-    <div class="col-xl-4">
+    <div class="col-xl-4 col-lg-4 col-md-12 col-12 d-flex justify-content-center mt-3">
       <div class="img-comp-container rounded">
         <div class="img-comp-img">
-          <img src="../images/comp1.jpg" width="300" height="200" />
+          <img src="../images/comp12.jpg" width="300" height="200" />
         </div>
         <div class="img-comp-img img-comp-overlay">
-          <img src="../images/comp2.jpg" width="300" height="200" />
+          <img src="../images/comp11.jpg" width="300" height="200" />
         </div>
+      </div>
+    </div>
+    <div class="col-12 d-flex justify-content-center mt-3">
+      <p class="text-muted" style="font-size: larger;">Lisää kuvia löydät Instagramista</p>
+    </div>
+    <div class="col-12 d-flex justify-content-center mt-1">
+            <a href="https://www.instagram.com/kauneuskulmasoma/" class="fa fa-instagram"></a>
       </div>
     </div>
   </div>
@@ -95,7 +135,7 @@
         <footer class="mt-5">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item">
-              <a class="nav-link px-2 text-muted" href="#">Home</a>
+              <a class="nav-link px-2 text-muted" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link px-2 text-muted" href="Hinnasto.html">Hinnasto</a>
@@ -105,12 +145,12 @@
               <a class="nav-link px-2 text-muted" href="#">Galleria</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-2 text-muted" href="#">Yhteystiedot</a>
+              <a class="nav-link px-2 text-muted" href="Yhteystiedot.html">Yhteystiedot</a>
             </li>
           </ul>
           <div class="footter">
           <ul class="nav justify-content-center ">
-            <a class="navbar-brand"  href="#">
+            <a class="navbar-brand">
               <image src="../images/Logo1.jpg" style="width:100px;" class="rounded-pill "></image>
             </a>
           </ul>
@@ -154,6 +194,7 @@
       <script>
         initComparisons();
       </script>
+      
 
 </body>
 </html>
