--- a/html/Hinnasto.html
+++ b/html/Hinnasto.html
@@ -495,22 +495,22 @@
        <footer class="mt-5">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item">
-            <a class="nav-link px-2 text-muted" href="#">Home</a>
+            <a class="nav-link px-2 text-muted" href="../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link px-2 text-muted" href="Hinnasto.html">Hinnasto</a>
+            <a class="nav-link px-2 text-muted" href="#">Hinnasto</a>
           </li>
           <br>
           <li class="nav-item">
-            <a class="nav-link px-2 text-muted" href="#">Galleria</a>
+            <a class="nav-link px-2 text-muted" href="Galleria.html">Galleria</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link px-2 text-muted" href="#">Yhteystiedot</a>
+            <a class="nav-link px-2 text-muted" href="Yhteystiedot.html">Yhteystiedot</a>
           </li>
         </ul>
         <div class="footter">
         <ul class="nav justify-content-center ">
-          <a class="navbar-brand"  href="#">
+          <a class="navbar-brand">
             <image src="../images/Logo1.jpg" style="width:100px;" class="rounded-pill "></image>
           </a>
         </ul>
