--- a/index.html
+++ b/index.html
@@ -168,19 +168,19 @@
             <a class="nav-link px-2 text-muted" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link px-2 text-muted" href="#">Hinnasto</a>
+            <a class="nav-link px-2 text-muted" href="html/Hinnasto.html">Hinnasto</a>
           </li>
           <br>
           <li class="nav-item">
-            <a class="nav-link px-2 text-muted" href="#">Galleria</a>
+            <a class="nav-link px-2 text-muted" href="html/Galleria.html">Galleria</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link px-2 text-muted" href="#">Yhteystiedot</a>
+            <a class="nav-link px-2 text-muted" href="html/Yhteystiedot.html">Yhteystiedot</a>
           </li>
         </ul>
         <div class="footter">
           <ul class="nav justify-content-center ">
-            <a class="navbar-brand"  href="#">
+            <a class="navbar-brand">
               <image src="./images/Logo1.jpg" style="width:100px;" class="rounded-pill "></image>
             </a>
           </ul>
@@ -204,7 +204,7 @@
         </ul>
         <ul class="nav justify-content-center ">
           <li>
-            <p class="text-muted">Seuraa meitä:</p>
+            <p class="text-muted">Seuraa meitä</p>
           </li>
         </ul>
         <ul class="nav justify-content-center">
