--- a/html/Yhteystiedot.html
+++ b/html/Yhteystiedot.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Kauneuskulma Somassa voit rentoutua kiireettömässä ilmapiirissä.
+    Yksilölliset ja ammattimaiset hoidot tarjoaa SKY-kosmetologi Anu Sillanpää.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Document</title>
+    <title>Kauneuskulma Soma - Yhteystiedot</title>
+        <!-- add icon link -->
+        <link rel = "icon" href =
+        "../images/Logo_small.png"
+        type = "image/x-icon">
 </head>
 <body>
         <!--Navbar start here-->
@@ -16,7 +22,7 @@
           <nav class="navbar bigImage navbar-expand-lg">
             
             
-            <div class="col-lg-5 col-xl-5 col-12  services-section d-flex justify-content-lg-end justify-content-center">
+            <div class="col-lg-5 col-xl-5 col-12  services-section d-flex justify-content-lg-end justify-content-center buttonCenter">
               <a class="navbar-brand"  href="../index.html">
                 <image src="../images/Logo1.jpg" style="width:200px;" class="rounded-pill "></image>
               </a>
