Cleaning and nice transition

--- a/html/Galleria.html
+++ b/html/Galleria.html
@@ -24,7 +24,7 @@
             
             <div class="col-lg-5 col-xl-5 col-12  services-section d-flex justify-content-lg-end justify-content-center buttonCenter">
               <a class="navbar-brand"  href="../index.html">
-                <image src="../images/Logo1.jpg" style="width:200px;" class="rounded-pill "></image>
+                <image src="../images/Logo1.jpg" alt="Kauneuskulma soma logo" style="width:200px;" class="rounded-pill "></image>
               </a>
             </div>
             
