tuote site update

--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@
   Yksilölliset ja ammattimaiset hoidot tarjoaa<br> SKY-kosmetologi Anu Sillanpää.
 </h3>
 <div class="buttonCenter">
-<a class="ajanVaraus mt-5 text-muted" href="https://varaa.timma.fi/kauneuskulmasoma">VARAA AIKASI TÄSTÄ</a>
+  <div class="col-lg-12">
+    <a class="ajanVaraus mt-5 text-muted" href="https://varaa.timma.fi/kauneuskulmasoma">Varaa aikasi tästä</a>
+    <a class="ajanVaraus mt-2 text-muted" href="https://gifti.fi/shop/kauneuskulmasoma/">Sähköinen lahjakortti</a>
+  </div>
 </div>
+
 </div>
 <!-- Carousel -->
 <div id="carousel"class="carousel carousel-dark slide col-lg-5 mt-5" data-bs-ride="carousel">
@@ -139,9 +143,9 @@
   <div class="card">
     <div class="cardImage"><img class="card-img-top" src="./images/background.png" alt="Kauneuskulma soma kortin tausta"></div>
     <div class="card-block">
-      <h4 class="card-title mt-2">Kiinteyttävä RF-kasvohoito</h4>
-      <p class="card-text mt-4">RF (radiofrekvenssi) parantaa<br> ihon kimmoisuutta, muotoilee leukalinjaa ja häivyttää ryppyjä.<br> Hoidon jälkeen iho näyttää nuoremmalta ja sileämmältä. 
-        </p>
+      <h4 class="card-title mt-2">Cube Hifu kasvojen kohotus</h4>
+      <p class="card-text mt-4">Cube Hifun teho perustuu tarkasti kohdennettuun uä-energiaan, jonka avulla impulssi saadaan tehokkaasti ja tarkasti kohdistettua kudokseen. 
+      </br>Vaikutukset näkyvät ryppyjen madaltumisena ja vähenemisenä, ihon kiinteytymisenä, kimmoisuuden lisääntymisenä sekä nuorentuneena ilmeenä.</p>
     </div>
     <div class="card-block">
       <button class="btn text-muted infoButton mt-1" type="button" onclick="openPage(3)" >Lue lisää ...</button>
