--- a/Hinnasto.html
+++ b/Hinnasto.html
@@ -91,6 +91,44 @@
 </div>
   <div id="accordion">
     <div class="card cardPrice">
+      <div class="collapsed btn" id="CubeHifu" data-bs-toggle="collapse" href="#collapse32">
+        <div class="row hintaTaulukko text-muted">
+          <div class="col-lg-6 col-md-6 col-6 d-flex justify-content-start"> <p class="mobileText">Lipolaser rasvanpoisto-hoito vartalolle</p></div><div class="col-lg-6 col-md-6 col-6 d-flex justify-content-end"> <p class="hintaTextEnd">89€</p></div>
+      </div>
+      </div>
+      <div id="collapse32" class="collapse" data-bs-parent="#accordion">
+        <div class="card-body text-muted">
+         <p>Lipolaser on matalataajuista laseria, joka saa aikaan kemiallisen signaalin rasvasolussa. 
+          Ylimääräinen varastoitunut rasva muuttuu rasvahapoksi ja glyseroliksi, ne vapautuvat aineenvaihduntaan ja poistuvat kehosta. 
+          <br>Lymfa tehostaa aineenvaihduntaa. 
+          <br>Sopii kaikille perusterveille naisille ja miehille.
+          </br>Lipolaser- hoito + lymfahoito jaloille 89€
+          </br>Lipolaser- hoito + lymfahoito jaloille x 3 sarja 226€
+          </br>Lipolaser- hoito + lymfahoito jaloille x 5 sarja 356€
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="card cardPrice">
+      <div class="collapsed btn" id="CubeHifu" data-bs-toggle="collapse" href="#collapse33">
+        <div class="row hintaTaulukko text-muted">
+          <div class="col-lg-6 col-md-6 col-6 d-flex justify-content-start"> <p class="mobileText">Lipolaser rasvanpoisto-hoito leualle</p></div><div class="col-lg-6 col-md-6 col-6 d-flex justify-content-end"> <p class="hintaTextEnd">69€</p></div>
+      </div>
+      </div>
+      <div id="collapse33" class="collapse" data-bs-parent="#accordion">
+        <div class="card-body text-muted">
+         <p>Lipolaser on matalataajuista laseria, joka saa aikaan kemiallisen signaalin rasvasolussa. 
+          Ylimääräinen varastoitunut rasva muuttuu rasvahapoksi ja glyseroliksi, ne vapautuvat aineenvaihduntaan ja poistuvat kehosta. 
+          <br>Lymfa tehostaa aineenvaihduntaa. 
+          <br>Sopii kaikille perusterveille naisille ja miehille.
+          </br>Lipolaser- hoito + lymfahoito jaloille 69€
+          </br>Lipolaser- hoito + lymfahoito jaloille x 3 sarja 175€
+          </br>Lipolaser- hoito + lymfahoito jaloille x 5 sarja 276€
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="card cardPrice">
       <div class="collapsed btn" data-bs-toggle="collapse" href="#collapse1">
         <div class="row hintaTaulukko text-muted">
         <div class="col-lg-6 col-md-6 col-6 d-flex justify-content-start"><p class="mobileText">Ripsien värjäys</p></div><div class="col-lg-6 col-md-6 col-6 d-flex justify-content-end"><p>19€</p></div>
@@ -196,7 +234,7 @@
       <div id="collapse8" class="collapse" data-bs-parent="#accordion">
         <div class="card-body text-muted">
           <p>Tehokas ja hellävarainen ihon syväpuhdistus ja kuorinta, joka samalla aktivoi ihon toimintoja.
-            Alkupuhdistus, ultraäänipuhdistus, naamio, niska- hartia ja päähieronta, seerumi ja loppuvoide.</p>
+            Alkupuhdistus, ultraäänipuhdistus, naamio, niska ja hartiahieronta, seerumi ja loppuvoide.</p>
         </div>
       </div>
     </div>
@@ -208,7 +246,7 @@
       </div>
       <div id="collapse9" class="collapse" data-bs-parent="#accordion">
         <div class="card-body text-muted">
-          <p>Alkupuhdistus, kuorinta, höyry, mekaaninen puhdistus, naamio, niska- hartia ja päähieronta, seerumi ja loppuvoide.Jos on paljon puhdistettavaa,
+          <p>Alkupuhdistus, kuorinta, höyry, mekaaninen puhdistus, naamio, niska ja hartiahieronta, seerumi ja loppuvoide.Jos on paljon puhdistettavaa,
             valitse lisäpalveluna vielä lisäksi mekaaninen puhdistus.
           </p>
         </div>
@@ -225,7 +263,7 @@
           <p>
             Kuorii hellävaraisesti ja tehokkaasti kuolleen ihosolukon ihon pinnalta. 
             Hoidon jälkeen hoitouotteet imeytyvät myös paremmin ja iho on kirkkaamman ja terveemmän näköinen. 
-            Alkupuhdistus, timanttihionta, naamio, niska- hartia ja päähieronta, seerumi ja loppuvoide.
+            Alkupuhdistus, timanttihionta, naamio, niska ja hartiahieronta, seerumi ja loppuvoide.
           </p>
         </div>
       </div>
@@ -240,7 +278,7 @@
         <div class="card-body text-muted">
          <p> RF (radiofrekvenssi) parantaa ihon kimmoisuutta, muotoilee leukalinjaa ja häivyttää ryppyjä. 
           Hoidon jälkeen iho näyttää nuoremmalta ja sileämmältä. Suositellaan sarjahoitoa 5x 2-3 viikon välein. 
-          Alkupuhdistus, RF, naamio, niska,- hartia- ja päähieronta, seerumi ja loppuvoide</p>
+          Alkupuhdistus, RF, naamio, niska ja hartiahieronta, seerumi ja loppuvoide</p>
         </div>
       </div>
     </div>
@@ -254,7 +292,7 @@
       <div id="collapse12" class="collapse" data-bs-parent="#accordion">
         <div class="card-body text-muted">
           <p>Puhdistaa ja kuorii ihoa sekä tyhjentää musta- ja valkopäitä ihohuokosista. Hoitavat aineet imeytyvät ihoon hoidon aikana. 
-            Sopii kaikille ihotyypeille. Alkupuhdistus, Hydra Dermabrasion puhdistus, naamio, niska-, hartia ja päähieronta, seerumi ja loppuvoide.</p>
+            Sopii kaikille ihotyypeille. Alkupuhdistus, Hydra Dermabrasion puhdistus, naamio, niska ja hartiahieronta, seerumi ja loppuvoide.</p>
         </div>
       </div>
     </div>
@@ -268,7 +306,7 @@
         <div class="card-body text-muted">
           <p>Hydra Dermabrasion puhdistus tyhjentää musta- ja valkopäitä huokosista. 
           Hoitavat aineet imeytyvät ihoon hoidon aikana ja jäävät vaikuttamaan ihossa vielä hoidon jälkeenkin. RF parantaa ihon kimmoisuutta ja häivyttää ryppyjä. 
-          Alkupuhdistus, Hydra Dermabrasion puhdistus, RF kiinteytys, led-valohoito, naamio, niska,- hartia- ja päähieronta, spray, seerumi, uä- imeytys ja loppuvoide.</p>
+          Alkupuhdistus, Hydra Dermabrasion puhdistus, RF kiinteytys, led-valohoito, naamio, niska ja hartiahieronta, spray, seerumi, uä- imeytys ja loppuvoide.</p>
         </div>
       </div>
     </div>
@@ -283,7 +321,7 @@
          <p>Cube Hifun teho perustuu tarkasti kohdennettuun uä-energiaan, jonka avulla impulssi saadaan tehokkaasti ja tarkasti kohdistettua kudokseen. 
          </br>Vaikutukset näkyvät ryppyjen madaltumisena ja vähenemisenä, ihon kiinteytymisenä, kimmoisuuden lisääntymisenä sekä nuorentuneena ilmeenä. 
          </br>Alkupuhdistus, timanttihionta tai uä-puhdistus, Hifu ( kaksi aluetta), 
-          naamio, niska,-hartia-ja päähieronta, seerumi ja loppuvoide.</br> Alueet: leukalinja, posket, kaula, silmänympärys ja otsa.
+          naamio, niska ja hartiahieronta, seerumi ja loppuvoide.</br> Alueet: leukalinja, posket, kaula, silmänympärys ja otsa.
           </br>+ yksi lisäalue 39€
           </br>+ kaksi lisäaluetta 69€
           </br>+ kolme lisäaluetta 99€
@@ -302,7 +340,7 @@
          <p>Cube Hifun teho perustuu tarkasti kohdennettuun uä-energiaan, jonka avulla impulssi saadaan tehokkaasti ja tarkasti kohdistettua kudokseen. 
          </br>Vaikutukset näkyvät ryppyjen madaltumisena ja vähenemisenä, ihon kiinteytymisenä, kimmoisuuden lisääntymisenä sekä nuorentuneena ilmeenä. 
          </br>Alkupuhdistus, timanttihionta tai uä-puhdistus, Hifu ( kaksi aluetta), 
-          naamio, niska,-hartia-ja päähieronta, seerumi ja loppuvoide.</br> Alueet: leukalinja, posket, kaula, silmänympärys ja otsa.
+          naamio, niska ja hartiahieronta, seerumi ja loppuvoide.</br> Alueet: leukalinja, posket, kaula, silmänympärys ja otsa.
 
           </p>
         </div>
@@ -317,7 +355,7 @@
       <div id="collapse14" class="collapse" data-bs-parent="#accordion">
         <div class="card-body text-muted">
          <p>Syväpuhdistava kasvohoito ionisoidun veden ja timanttihionnan avulla. Ionisoitu vesi on antibakteerista, ihohuokosia supistavaa ja erittäin kosteuttavaa. Sopii erityisesti rasvoittuvalle ja epäpuhtaalle iholle. 
-          Alkupuhdistus, Hydra puhdistus, naamio, niska-, hartia- ja päähieronta,seerumi ja loppuvoide.</p>
+          Alkupuhdistus, Hydra puhdistus, naamio, niska ja hartiahieronta, seerumi ja loppuvoide.</p>
         </div>
       </div>
     </div>
@@ -344,18 +382,6 @@
       <div id="collapse16" class="collapse" data-bs-parent="#accordion">
         <div class="card-body text-muted">
           <p>Alkupuhdistus, kuorinta, naamio ja loppuvoide.</p>
-        </div>
-      </div>
-    </div>
-    <div class="card cardPrice">
-      <div class="collapsed btn" data-bs-toggle="collapse" href="#collapse17">
-        <div class="row hintaTaulukko text-muted">
-          <div class="col-lg-6 col-md-6 col-6 d-flex justify-content-start"><p class="mobileText">Manikyyri</p></div><div class="col-lg-6 col-md-6 col-6 d-flex justify-content-end"><p class="hintaTextEnd">36€</p></div>
-      </div>
-      </div>
-      <div id="collapse17" class="collapse" data-bs-parent="#accordion">
-        <div class="card-body text-muted">
-          <p>Kynsien viilaus ja leikkaus, kynsinauhojen siistiminen, lakkaus ja voide.</p>
         </div>
       </div>
     </div>
@@ -434,18 +460,6 @@
       </div>
     </div>
     <div class="card cardPrice">
-      <div class="collapsed btn" data-bs-toggle="collapse" href="#collapse25">
-        <div class="row hintaTaulukko text-muted">
-          <div class="col-lg-6 col-md-6 col-6 d-flex justify-content-start"><p class="mobileText">Jalkahieronta</p></div><div class="col-lg-6 col-md-6 col-6 d-flex justify-content-end"><p class="hintaTextEnd">30€</p></div>
-      </div>
-      </div>
-      <div id="collapse25" class="collapse" data-bs-parent="#accordion">
-        <div class="card-body text-muted">
-          <p>30min. rentouttava jalkahieronta.</p>
-        </div>
-      </div>
-    </div>
-    <div class="card cardPrice">
       <div class="collapsed btn" data-bs-toggle="collapse" href="#collapse26">
         <div class="row hintaTaulukko text-muted">
           <div class="col-lg-6 col-md-6 col-6 d-flex justify-content-start"><p class="mobileText">Pikajalkahoito</p></div><div class="col-lg-6 col-md-6 col-6 d-flex justify-content-end"><p class="hintaTextEnd">40€</p></div>
@@ -457,31 +471,6 @@
         </div>
       </div>
     </div>
-    <div class="card cardPrice">
-      <div class="collapsed btn" data-bs-toggle="collapse" href="#collapse27">
-        <div class="row hintaTaulukko text-muted">
-          <div class="col-lg-6 col-md-6 col-6 d-flex justify-content-start"><p class="mobileText">Selän ultraäänipuhdistus</p></div><div class="col-lg-6 col-md-6 col-6 d-flex justify-content-end"><p class="hintaTextEnd">65€</p></div>
-      </div>
-      </div>
-      <div id="collapse27" class="collapse" data-bs-parent="#accordion">
-        <div class="card-body text-muted">
-          <p>Alkupuhdistus, ultraäänipuhdistus, naamio ja loppuvoide.</p>
-        </div>
-      </div>
-    </div>
-    <div class="card cardPrice">
-      <div class="collapsed btn" data-bs-toggle="collapse" href="#collapse28">
-        <div class="row hintaTaulukko text-muted">
-          <div class="col-lg-6 col-md-6 col-6 d-flex justify-content-start"><p class="mobileText">Selän timanttihionta</p></div><div class="col-lg-6 col-md-6 col-6 d-flex justify-content-end"><p class="hintaTextEnd">65€</p></div>
-      </div>
-      </div>
-      <div id="collapse28" class="collapse" data-bs-parent="#accordion">
-        <div class="card-body text-muted">
-          <p>Alkupuhdistus, timanttihionta, naamio ja loppuvoide</p>
-        </div>
-      </div>
-    </div>
-
     <div class="card cardPrice">
       <div class="collapsed btn" data-bs-toggle="collapse" href="#collapse29">
         <div class="row hintaTaulukko text-muted">
@@ -540,7 +529,7 @@
       </div>
       <div id="collapse37" class="collapse" data-bs-parent="#accordion">
         <div class="card-body text-muted">
-          <p>Alkupuhdistus, timanttihionta, RF-hoito, led-valohoito 15min. Naamio, niska- hartia ja päähieronta, seerumi ja loppuvoide.</p>
+          <p>Alkupuhdistus, timanttihionta, RF-hoito, led-valohoito 15min. Naamio, niska ja hartiahieronta, seerumi ja loppuvoide.</p>
         </div>
       </div>
     </div>
