--- a/index.html
+++ b/index.html
@@ -78,8 +78,6 @@
               <div class="buttonCenter">
                 <div class="col-lg-12">
                   <a class="ajanVaraus mt-5 text-muted" href="https://varaa.timma.fi/kauneuskulmasoma">Varaa aikasi tästä</a>
-                  <a class="ajanVaraus mt-2 text-muted" href="https://gifti.fi/shop/kauneuskulmasoma/">Sähköinen
-                    lahjakortti</a>
                 </div>
               </div>
       
@@ -143,7 +141,7 @@
             </div>
           </div>
           <div class="row">
-            <a class="nav-link hinnasto text-muted" href="./html/Hinnasto.html">KAIKKI PALVELUMME</a>
+            <a class="nav-link hinnasto text-muted" href="Hinnasto.html">KAIKKI PALVELUMME</a>
           </div>
           <!--Hoito kortit End here-->
       
